	PR go/61871 runtime: Increase stack size on 64-bit non-split-stack systems.

From Uros Bizjak.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@219192 138bc75d-0d04-0410-961f-82ee72b054a4